[docs] 사이트 구성 및 문서 추가: 재테크 및 포트폴리오 섹션 추가, Docusaurus 설정 수정